--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<java.version>1.8</java.version>
 		<hamcrest.version>2.2</hamcrest.version>
 		<junit-jupiter-api.version>5.6.2</junit-jupiter-api.version>
+		<mockito-junit-jupiter.version>2.23.0</mockito-junit-jupiter.version>
 	</properties>
 
 	<dependencies>
@@ -30,7 +31,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
-			<version>2.23.0</version>
+			<version>${mockito-junit-jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -45,6 +46,27 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.verygood.security.coding.CodingApplication</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
