--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,24 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<hamcrest.version>2.2</hamcrest.version>
-		<junit-jupiter-api.version>5.6.2</junit-jupiter-api.version>
+		<junit-jupiter.version>5.6.2</junit-jupiter.version>
 		<mockito-junit-jupiter.version>2.23.0</mockito-junit-jupiter.version>
+		<commons-lang3.version>3.10</commons-lang3.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>${junit-jupiter-api.version}</version>
+			<version>${junit-jupiter.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit-jupiter.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -33,6 +42,11 @@
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<version>${mockito-junit-jupiter.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -67,7 +81,15 @@
 					</descriptorRefs>
 				</configuration>
 			</plugin>
-        </plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
     </build>
 
 </project>
